networkpolicy/service/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils-default
  namespace: default
  labels:
    app: dnsutils
spec:
  containers:
  - name: dnsutils-default
    image: tutum/dnsutils
    command:
      - /bin/sh
      - -c
      - sleep 10000000
---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils-default-forbidden
  namespace: default
  labels:
    app: dnsutils-forbidden
spec:
  containers:
  - name: dnsutils-default
    image: tutum/dnsutils
    command:
      - /bin/sh
      - -c
      - sleep 10000000

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-default
  namespace: default
  labels:
    app: nginx-default
spec:
  containers:
  - name: nginx-default
    image: nginx:1.14.2-alpine
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-default-service
  namespace: default
spec:
  selector:
    app: nginx-default
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils-dev
  namespace: dev
  labels:
    app: dnsutils
spec:
  containers:
  - name: dnsutils-dev
    image: tutum/dnsutils
    command:
      - /bin/sh
      - -c
      - sleep 10000000
---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils-dev-forbidden
  namespace: dev
  labels:
    app: dnsutils-forbidden
spec:
  containers:
  - name: dnsutils-dev
    image: tutum/dnsutils
    command:
      - /bin/sh
      - -c
      - sleep 10000000

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-dev
  namespace: dev
  labels:
    app: nginx-dev
spec:
  containers:
  - name: nginx-dev
    image: nginx:1.14.2-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev-service
  namespace: dev
spec:
  selector:
    app: nginx-dev
  ports:
    - port: 80
      targetPort: 80
